[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "webgl"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

js-sys = "0.3"

web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "Window",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlFramebuffer",
    "WebGlRenderbuffer"
] }
wasm-bindgen-futures = "0.4.55"
